--- a/templates/pagelist.tmpl
+++ b/templates/pagelist.tmpl
@@ -1,5 +1,5 @@
 {{ define "Header" }}{{ end }}
-{{ define "Contents" }}
+{{ define "Content" }}
 
 {{ range .Pages }}
 	<a href="/page/{{ .Title }}">{{ .Title }}</a><br />
