staticからリソースを読み込めるように

--- a/templates/layouts/default.tmpl
+++ b/templates/layouts/default.tmpl
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{ .Title }}</title>
-	<link rel="stylesheet" href="main.css" />
+	{{ .LinkCSS "main.css" }}
 	{{ template "Header" . }}
 </head>
 <body>
