static以下のファイルを正常に読み込めるように、テンプレートファイルのファイル名を変更、page_edit、page_createを作成

--- a/templates/pagelist.tmpl
+++ b/templates/pagelist.tmpl
@@ -2,7 +2,7 @@
 {{ define "Content" }}
 
 {{ range .Pages }}
-	<a href="/page/{{ .Title }}">{{ .Title }}</a><br />
+	<a href="/page/view/{{ .Title }}">{{ .Title }}</a><br />
 {{ else }}
 	<h3>ページが存在しません</h3>
 {{ end }}
