プラグイン機能を追加

--- a/templates/pageCreate.tmpl
+++ b/templates/pageCreate.tmpl
@@ -1,9 +1,9 @@
 {{ define "Header" }}{{ end }}
 {{ define "Content" }}
 
-<form action="/page/save/" method="POST">
+<form action="/page/save/" method="post">
 
-	<input type="text" name="Title">タイトル</input><br />
+	<input type="text" name="Title" value="タイトル" /><br />
 
 	<textarea name="Content">内容</textarea><br />
 
