--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,72 @@
-* {
+body {
 	margin:  0;
 	padding: 0;
+	font-family: Helvetica, arial, sans-serif;
+	font-size: 14px;
+	line-height: 1.6;
+	color: #222;
+}
+
+a {
+	color: #4183C4; }
+a.absent {
+	color: #cc0000; }
+a.anchor {
+	display: block;
+	padding-left: 30px;
+	margin-left: -30px;
+	cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0; }
+
+header {
+	display: block;
+
+	height: 200px;
+	width : 100%;
+
+	margin-bottom: 10px;:
+
+	color: #eee;
+
+	background-color: #111;
+}
+header h1 {
+	line-height: 200px;
+
+	margin: auto 50px;
+
+	color: #ddd;
+
+	text-align: center;
+}
+
+#sidebar {
+	float: left;
+
+	width: 200px;
+
+	margin: 10px;
+
+	border: 1px solid #ddd;
+}
+
+article {
+	width : 800px;
+
+	margin: 10px auto;
+}
+
+article .page_information {
+	display: block;
+
+	width: 100%;
+
+	font-size: 0.8em;
+	font-style: italic;
+	text-align: right;
+
+	color: #bbb;
 }
