--- a/templates/layouts/default.tmpl
+++ b/templates/layouts/default.tmpl
@@ -4,9 +4,22 @@
 	<meta charset="utf-8">
 	<title>{{ .Title }}</title>
 	{{ .LinkCSS "main.css" }}
+	{{ .LinkCSS "markdown.css" }}
 	{{ template "Header" . }}
 </head>
 <body>
+	<header>
+		<h1>{{ .Title }}</h1>
+	</header>
+
+	<div id="sidebar">
+	{{ .Plugin "sidebar" }}
+	</div>
+
+	<article>
+	
 	{{ template "Content" . }}
+
+	</article>
 </body>
 </html>
