--- a/templates/pageEdit.tmpl
+++ b/templates/pageEdit.tmpl
@@ -3,7 +3,7 @@
 <form action="/page/save/" method="post">
 	<input type="hidden" name="OldTitle" value="{{ .Information.Title }}" /><br />
 	<input type="text" name="Title" value="{{ .Information.Title }}" /><br />
-	<textarea name="Content">{{ .Information.Content.String }}</textarea><br />
+	<textarea name="Content" cols=100 rows=50>{{ .Information.Content.String }}</textarea><br />
 	<input type="submit" value="保存" />
 </form>
 {{ end }}
