--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,8 +22,6 @@ a.anchor {
 	bottom: 0; }
 
 header {
-	display: block;
-
 	height: 200px;
 	width : 100%;
 
@@ -33,14 +31,34 @@ header {
 
 	background-color: #111;
 }
-header h1 {
-	line-height: 200px;
+header div {
+	width:  100%;
+	height: 150px;
+}
+header div h1 {
+	line-height: 150px;
 
-	margin: auto 50px;
+	width: auto;
+
+	margin: 0;
+	padding-top: 20px;
 
 	color: #ddd;
 
 	text-align: center;
+}
+header div span {
+	display: block;
+	width: 100%;
+
+	font-size: 0.7em;
+
+	text-align: center;
+}
+header div span a {
+	font-style: italic;
+
+	color: #ddd;
 }
 
 #sidebar {
@@ -69,4 +87,21 @@ article .page_information {
 	text-align: right;
 
 	color: #bbb;
+}
+
+article form {
+
+	margin:  50px;
+	padding: 50px;
+
+	border: 1px solid #ddd;
+
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+
+	/* box-shadow */
+	box-shadow:rgba(113, 135, 164, 0.44) 0px 0px 6px 3px;
+	-webkit-box-shadow:rgba(113, 135, 164, 0.44) 0px 0px 6px 3px;
+	-moz-box-shadow:rgba(113, 135, 164, 0.44) 0px 0px 6px 3px;
 }
