--- a/static/css/main_editor.css
+++ b/static/css/main_editor.css
@@ -1,4 +1,6 @@
 body {
+	width: 100%;
+	height: 100%;
 	margin:  0;
 	padding: 0;
 	font-family: Helvetica, arial, sans-serif;
@@ -21,11 +23,14 @@ a.anchor {
 	left: 0;
 	bottom: 0; }
 
-header {
-	height: 200px;
-	width : 100%;
+html {
+	width: 100%;
+	height: 100%;
+}
 
-	margin-bottom: 10px;:
+header {
+	height: 100px;
+	width : 100%;
 
 	color: #eee;
 
@@ -33,15 +38,15 @@ header {
 }
 header div {
 	width:  100%;
-	height: 150px;
+	height: 50px;
 }
 header div h1 {
-	line-height: 150px;
+	line-height: 50px;
 
 	width: auto;
 
 	margin: 0;
-	padding-top: 20px;
+	padding-top: 10px;
 
 	color: #ddd;
 
@@ -61,46 +66,55 @@ header div span a {
 	color: #ddd;
 }
 
-aside {
-	float: left;
-
-	width: 200px;
-
-	margin: 10px;
-
-	border: 1px solid #ddd;
-}
-
 section {
-	float: left;
-
-	width : 800px;
-
-	margin: 10px;
-}
-
-section .page_information {
-	display: block;
-
 	width: 100%;
+	height: 100%;
 
-	font-size: 0.8em;
-	font-style: italic;
-	text-align: right;
-
-	color: #bbb;
+	background: #ddd;
 }
 
 section form {
+	width: 100%;
+	height: 100%;
+}
 
-	border: 1px solid #ddd;
+section form input,textarea {
+	margin: 0;
+	padding: 0;
+	outline: 0;
+	border:  5px solid #ddd;
+}
 
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
+section form .title {
+	width: 100%;
+	height: 30px;
 
-	/* box-shadow */
-	box-shadow:rgba(113, 135, 164, 0.44) 0px 0px 6px 3px;
-	-webkit-box-shadow:rgba(113, 135, 164, 0.44) 0px 0px 6px 3px;
-	-moz-box-shadow:rgba(113, 135, 164, 0.44) 0px 0px 6px 3px;
+	font-size: 2em;
+}
+
+section form .content {
+	float: left;
+	width: 48%;
+	height:100%;
+
+	font-size: 1.3em;
+}
+
+section form .preview {
+	float:left;
+	overflow: scroll;
+
+	width: 50%;
+	height: 100%;
+	padding: 5px;
+
+	background: #fff;
+}
+
+section form .button {
+	clear: left;
+	width: 200px;
+	height: 50px;
+
+	font-size: 1.4em;
 }
