--- a/templates/pageView.tmpl
+++ b/templates/pageView.tmpl
@@ -3,7 +3,13 @@
 {{ define "Content" }}
 <span class="page_information">
 作成者: <a href="/user/view/{{ .Information.User }}">{{ .Information.User }}</a>, 作成日: {{ .Information.Created.Format "Jan _2 3:04:05PM" }}, 最終変更: {{ .Information.Modified.Time.Format "Jan _2 3:04:05PM" }}  
-<a href="/page/edit/{{ .Information.Title }}">{{ .EmbedImage "edit.png" "編集" }}</a>
+{{ if eq .Information.User .User }}
+	<a href="/page/edit/{{ .Information.Title }}">{{ .EmbedImage "edit.png" "編集" }}</a>
+{{ else }}
+	{{ if not .Information.Locked }}
+	<a href="/page/edit/{{ .Information.Title }}">{{ .EmbedImage "edit.png" "編集" }}</a>
+	{{ end }}
+{{ end }}
 </span>
 {{ .Markdown }}
 {{ end }}
