--- a/templates/pageEdit.tmpl
+++ b/templates/pageEdit.tmpl
@@ -9,5 +9,6 @@
 
 	</div>
 	<input class="button" type="submit" value="保存" />
+	<input class="locked" name="Locked" type="checkbox" value="1" {{ if .Information.Locked }}checked="checked"{{ end }}>ロックする
 </form>
 {{ end }}
