--- a/templates/layouts/editor.tmpl
+++ b/templates/layouts/editor.tmpl
@@ -7,6 +7,7 @@
 	{{ .LinkCSS "markdown.css" }}
 	{{ .LinkJS "jquery.js" }}
 	{{ .LinkJS "editor.js" }}
+	{{ .LinkJS "jquery.filedrop.js" }}
 	{{ template "Header" . }}
 </head>
 <body>
